--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -50,6 +50,9 @@
               <fieldset>
                 <legend>ログイン</legend>
                 <div class="form-group">
+                  <div th:if="${message}" class="alert alert-danger">
+                    <p th:text="${message}"></p>
+                  </div>
                   <div th:if="${errorMessage}" class="alert alert-danger">
                     <p th:text="${errorMessage}">
                       メールアドレスまたはパスワードが間違っています
