従業員一覧に名前検索フォームを追加

--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -92,11 +92,17 @@
       <!-- table -->
       <div class="row">
         <div
-          class="table-responsive col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12"
+        class="table-responsive col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12"
         >
-          <!-- ここから上を編集する必要はありません -->
+        <!-- ここから上を編集する必要はありません -->
 
-          <!-- ここにモックのtable要素を貼り付けます -->
+         <!-- 従業員名で検索 -->
+          <form th:action="@{/employee/find_name}" method="post">
+            従業員名:<input type="text" name="name">
+            <button>検索</button>
+          </form>
+        
+        <!-- ここにモックのtable要素を貼り付けます -->
 
           <table class="table table-striped">
             <thead>
