--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,30 @@
     <link rel="stylesheet" href="../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}">
     <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}">
 </head>
+
 <body>
-    <pre>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span> <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- 企業ロゴ -->
+                <img src="../../static/img/header_logo_small.png" th:src="@{/img/header_logo_small.png}" />
+            </div>
+        </div>
+        <pre>
     404 Not Found
     お探しのページが見つかりませんでした。
 
     以下のリンクから再度ログインをお願いします。
-    </pre>
-    <a th:href="@{/}">ログイン画面へ移動</a>
+        </pre>
+        <a th:href="@{/}">ログイン画面へ移動</a>
+    </nav>
 </body>
+
 </html>
