--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -10,16 +10,31 @@
 </head>
 
 <body>
-    <pre>
-    以下のいずれかの理由により、システムエラーが発生しました。
-    
-    ・不正な操作が行われた
-    ・長い時間操作を行わなかった
-    ・現在システムメンテナンス中
-
-    以下のリンクから再度ログインをお願いします。
-    </pre>
-    <a th:href="@{/}">ログイン画面へ移動</a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span> <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- 企業ロゴ -->
+                <img src="../../static/img/header_logo_small.png" th:src="@{/img/header_logo_small.png}" />
+            </div>
+        </div>
+        <pre>
+            以下のいずれかの理由により、システムエラーが発生しました。
+            
+            ・不正な操作が行われた
+            ・長い時間操作を行わなかった
+            ・現在システムメンテナンス中
+        
+            以下のリンクから再度ログインをお願いします。
+        </pre>
+        <a th:href="@{/}">ログイン画面へ移動</a>
+    </nav>
 </body>
 
 </html>
