--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -35,10 +35,8 @@
             <fieldset>
               <legend>ログイン</legend>
               <div class="form-group">
-                <p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="alert alert-danger"></p>
-                <div th:if="${message}" class="alert alert-danger">
-                  <p th:text="${message}"></p>
-                </div>
+                <p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}" th:text="メールアドレスかパスワードが正しくありません"
+                  class="alert alert-danger"></p>
               </div>
               <div class="form-group">
                 <label for="mailAddress">メールアドレス:</label>
